Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
dev
-
None
-
224f8056a (dev)
Description
Yet another complaint from gcc 13.2.1.
[46/142] Building CXX object qtdeclarative/src/qmldom/CMakeFiles/QmlDomPrivate.dir/qqmldomexternalitems.cpp.o FAILED: qtdeclarative/src/qmldom/CMakeFiles/QmlDomPrivate.dir/qqmldomexternalitems.cpp.o /usr/lib/icecream/libexec/icecc/bin/c++ -DQMLDOM_LIBRARY -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_QMLDOM_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_QMLCOMPILER_LIB -DQT_QMLINTEGRATION_LIB -DQT_QML_LIB -DQT_STRICT_QLIST_ITERATORS -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/home/rutledge/dev/qt6-dbg/qtdeclarative/src/qmldom/QmlDomPrivate_autogen/include -I/home/rutledge/dev/qt6-dbg/qtbase/include -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQmlDom -I/home/rutledge/dev/qt6/qtdeclarative/src/qmldom -I/home/rutledge/dev/qt6-dbg/qtdeclarative/src/qmldom -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQmlDom/6.7.0 -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQmlDom/6.7.0/QtQmlDom -I/home/rutledge/dev/qt6-dbg/qtdeclarative/src/qml -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQml/6.7.0 -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQml/6.7.0/QtQml -I/home/rutledge/dev/qt6-dbg/qtbase/src/corelib -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/6.7.0 -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/6.7.0/QtCore -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtCore -I/home/rutledge/dev/qt6-dbg/qtbase/mkspecs/linux-g++ -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQml -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQmlIntegration -I/home/rutledge/dev/qt6/qtdeclarative/src/qmlintegration -I/home/rutledge/dev/qt6-dbg/qtdeclarative/src/qmlintegration -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtNetwork -I/home/rutledge/dev/qt6-dbg/qtdeclarative/src/qmlcompiler -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQmlCompiler/6.7.0 -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQmlCompiler/6.7.0/QtQmlCompiler -I/home/rutledge/dev/qt6-dbg/qtbase/include/QtQmlCompiler -O2 -pipe -march=corei7 -g -std=c++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=implicit-fallthrough -Wno-error=deprecated-copy -Wno-error=redundant-move -Wno-error=init-list-lifetime -Wno-error=format-overflow -Wno-error=stringop-overflow -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -Wsuggest-override -MD -MT qtdeclarative/src/qmldom/CMakeFiles/QmlDomPrivate.dir/qqmldomexternalitems.cpp.o -MF qtdeclarative/src/qmldom/CMakeFiles/QmlDomPrivate.dir/qqmldomexternalitems.cpp.o.d -o qtdeclarative/src/qmldom/CMakeFiles/QmlDomPrivate.dir/qqmldomexternalitems.cpp.o -c /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomexternalitems.cpp In file included from /usr/include/c++/13.2.1/functional:59, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/../../../../qt6/qtbase/src/corelib/global/q20functional.h:8, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/q20functional.h:1, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/../../../../qt6/qtbase/src/corelib/tools/qarraydatapointer.h:10, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/qarraydatapointer.h:1, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/../../../../qt6/qtbase/src/corelib/tools/qlist.h:8, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/qlist.h:1, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/../../../../qt6/qtbase/src/corelib/tools/qversionnumber.h:9, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/qversionnumber.h:1, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/../../../../qt6/qtbase/src/corelib/global/qoperatingsystemversion.h:5, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/qoperatingsystemversion.h:1, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/6.7.0/QtCore/private/../../../../../../../qt6/qtbase/src/corelib/global/qglobal_p.h:63, from /home/rutledge/dev/qt6-dbg/qtbase/include/QtCore/6.7.0/QtCore/private/qglobal_p.h:1, from /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldom_fwd_p.h:19, from /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h:19, from /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomtop_p.h:18, from /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomexternalitems.cpp:4: In member function 'bool std::_Function_base::_M_empty() const', inlined from 'std::function<_Res(_ArgTypes ...)>::operator bool() const [with _Res = bool; _ArgTypes = {const QQmlJS::Dom::DomItem&}]' at /usr/include/c++/13.2.1/bits/std_function.h:574:25, inlined from 'std::function<_Res(_ArgTypes ...)>::function(const std::function<_Res(_ArgTypes ...)>&) [with _Res = bool; _ArgTypes = {const QQmlJS::Dom::DomItem&}]' at /usr/include/c++/13.2.1/bits/std_function.h:389:6, inlined from 'QQmlJS::Dom::PathEls::Filter::Filter(const QQmlJS::Dom::PathEls::Filter&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:269:7, inlined from 'QQmlJS::Dom::PathEls::PathComponent::Data::Data(const QQmlJS::Dom::PathEls::PathComponent::Data&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:363:46, inlined from 'QQmlJS::Dom::PathEls::PathComponent::Data::Data(const QQmlJS::Dom::PathEls::PathComponent::Data&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:331:9, inlined from 'QQmlJS::Dom::PathEls::PathComponent::PathComponent(const QQmlJS::Dom::PathEls::PathComponent&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:289:5, inlined from 'bool QQmlJS::Dom::DomItem::dvReference(QQmlJS::Dom::DirectVisitor, const QQmlJS::Dom::PathEls::PathComponent&, QQmlJS::Dom::Path) const' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h:1124:35, inlined from 'bool QQmlJS::Dom::DomItem::dvReferenceField(QQmlJS::Dom::DirectVisitor, QStringView, QQmlJS::Dom::Path) const' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h:1134:27: /usr/include/c++/13.2.1/bits/std_function.h:247:37: error: '*(const std::_Function_base*)((char*)&<unnamed> + offsetof(const QQmlJS::Dom::PathEls::PathComponent, QQmlJS::Dom::PathEls::PathComponent::data) + 8).std::_Function_base::_M_manager' may be used uninitialized [-Werror=maybe-uninitialized] /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h: In member function 'bool QQmlJS::Dom::DomItem::dvReferenceField(QQmlJS::Dom::DirectVisitor, QStringView, QQmlJS::Dom::Path) const': /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h:1134:27: note: '<anonymous>' declared here In member function 'bool std::_Function_base::_M_empty() const', inlined from 'std::function<_Res(_ArgTypes ...)>::operator bool() const [with _Res = bool; _ArgTypes = {const QQmlJS::Dom::DomItem&}]' at /usr/include/c++/13.2.1/bits/std_function.h:574:25, inlined from 'std::function<_Res(_ArgTypes ...)>::function(const std::function<_Res(_ArgTypes ...)>&) [with _Res = bool; _ArgTypes = {const QQmlJS::Dom::DomItem&}]' at /usr/include/c++/13.2.1/bits/std_function.h:389:6, inlined from 'QQmlJS::Dom::PathEls::Filter::Filter(const QQmlJS::Dom::PathEls::Filter&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:269:7, inlined from 'QQmlJS::Dom::PathEls::PathComponent::Data::Data(const QQmlJS::Dom::PathEls::PathComponent::Data&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:363:46, inlined from 'QQmlJS::Dom::PathEls::PathComponent::Data::Data(const QQmlJS::Dom::PathEls::PathComponent::Data&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:331:9, inlined from 'QQmlJS::Dom::PathEls::PathComponent::PathComponent(const QQmlJS::Dom::PathEls::PathComponent&)' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldompath_p.h:289:5, inlined from 'bool QQmlJS::Dom::DomItem::dvReferences(QQmlJS::Dom::DirectVisitor, const QQmlJS::Dom::PathEls::PathComponent&, QList<QQmlJS::Dom::Path>) const' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h:1130:35, inlined from 'bool QQmlJS::Dom::DomItem::dvReferencesField(QQmlJS::Dom::DirectVisitor, QStringView, QList<QQmlJS::Dom::Path>) const' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h:1138:28, inlined from 'virtual bool QQmlJS::Dom::QmldirFile::iterateDirectSubpaths(const QQmlJS::Dom::DomItem&, QQmlJS::Dom::DirectVisitor) const' at /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomexternalitems.cpp:248:42: /usr/include/c++/13.2.1/bits/std_function.h:247:37: error: '*(const std::_Function_base*)((char*)&<unnamed> + offsetof(const QQmlJS::Dom::PathEls::PathComponent, QQmlJS::Dom::PathEls::PathComponent::data) + 8).std::_Function_base::_M_manager' may be used uninitialized [-Werror=maybe-uninitialized] /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h: In member function 'virtual bool QQmlJS::Dom::QmldirFile::iterateDirectSubpaths(const QQmlJS::Dom::DomItem&, QQmlJS::Dom::DirectVisitor) const': /home/rutledge/dev/qt6/qtdeclarative/src/qmldom/qqmldomitem_p.h:1138:28: note: '<anonymous>' declared here cc1plus: all warnings being treated as errors