QmlDom: Civilize PathComponent::data

Using an internally tagged union is just way too nasty to be acceptable.
Compilers are were complaining about it.

Fixes: QTBUG-117140
Change-Id: I2316bd781a0b9f018bba8e658fce0c972057e631
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>